--- a/Swift/Podfile
+++ b/Swift/Podfile
@@ -3,33 +3,10 @@ source 'https://github.com/CocoaPods/Specs.git’
 platform :ios, '10.0'
 
 use_frameworks!
-target 'AEPSampleApp' do
-
-  # step-init-start
-  pod 'AEPServices'
+target 'YourTargetApp' do
   pod 'AEPCore'
   pod 'AEPLifecycle'
   pod 'AEPIdentity'
   pod 'AEPSignal'
   pod 'AEPRulesEngine'
-  # step-init-end
-
-
-  # step-extension-start
-  pod 'AEPSampleExtensionSwift', :git => 'https://github.com/adobe/aepsdk-sample-extension-ios.git', :branch => 'main'
-  # step-extension-end
-
-
-  # step-edge-start
-  pod 'AEPEdge'
-  # step-edge-end
-
-  # step-assurance-start
-  pod 'ACPCore', :git => 'https://github.com/adobe/aepsdk-compatibility-ios.git', :branch => 'main'
-  pod 'AEPAssurance'
-  # step-assurance-end
-
-  # step-analytics-start
-  pod 'AEPAnalyticsEdge', :git => 'https://github.com/adobe/aepsdk-analyticsedge-ios', :tag => '1.0.0-beta.2'
-  # step-analytics-end
 end
